[gd_scene load_steps=2 format=3 uid="uid://dxc0t67il66w8"]

[ext_resource type="Script" path="res://Scripts/Shop.gd" id="1_r4a8o"]

[node name="Shop" type="Panel"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r4a8o")

[node name="UpgradesMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 256
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 256

[node name="UpgradesVBox" type="VBoxContainer" parent="UpgradesMargin"]
layout_mode = 2

[node name="UpgradeAttackButton" type="Button" parent="UpgradesMargin/UpgradesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade Attack Faces (1 ðŸ’°)"

[node name="UpgradeGoldButton" type="Button" parent="UpgradesMargin/UpgradesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade Gold Faces (1 ðŸ’°)"

[node name="UpgradeCunningButton" type="Button" parent="UpgradesMargin/UpgradesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade Cunning Faces (1 ðŸ’°)"

[node name="ExitMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ExitVBox" type="VBoxContainer" parent="ExitMargin"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="ExitMargin/ExitVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"
